@@ -10,6 +10,8 @@
 - Updated core ordering page.
 - Enabled edit of $ amt on PO billing accounts
 - Added "Fill" button to fill in workflow parameters for all samples on an experiment.
+- Added code to only submit items that have changed when updating billing and to check each billing period 
+  for readyToInvoice when there are multiple periods on the request.
 
 5.1.4 (Apr 27, 2011)
 --------------------
